tests/ui/pattern/usefulness/issue-4321.stderr
error[E0004]: non-exhaustive patterns: `(true, false)` not covered
  --> $DIR/issue-4321.rs:3:31
   |
LL |     println!("foo {:}", match tup {
   |                               ^^^ pattern `(true, false)` not covered
   |
   = note: the matched value is of type `(bool, bool)`
help: ensure that all possible cases are being handled by adding a match arm with a wildcard pattern or an explicit pattern as shown
   |
LL ~         (true, true) => "baz",
LL +         (true, false) => todo!()
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0004`.
